--- a/docs/instagas/1-overview.mdx
+++ b/docs/instagas/1-overview.mdx
@@ -7,7 +7,7 @@ image: /img/posters/paymaster-meta.png
 
 # InstaGas
 
-InstaGas is a **no-code** platform that to sponsor gas fees for end-users by 
+InstaGas is a **no-code** platform that allows you to sponsor gas fees for end-users by
 creating customized gas policies tailored to their specific smart contracts and use cases.
 
 ![candide-instagas-logo](/img/logo/instagas-logo.png)
@@ -20,7 +20,7 @@ InstaGas is ideal for a variety of Apps, including:
 * DeFi exchanges
 * Lending protocols
 * Web3 games
-* NFTs Colletions and marketplaces
+* NFTs Collections and marketplaces
 * And many more..
 
 To see more examples of use cases, visit our [Usecases Categories](/instagas/usecases) page.
@@ -46,10 +46,9 @@ InstaGas provides a set of rules to customize gas policies for Apps. These rules
 3. Access Rules
 4. Transaction Rules
 
-Learn more in details about [Gas Polcies and Rules](/instagas/gas-policies) in the next page.
+Learn more in details about [Gas Policies and Rules](/instagas/gas-policies) in the next page.
 
 
 ## Support
 
-Have any questions? We're here to help. [Get in touch](https://cal.com/candidelabs/30mins) with the founders who will personally guide you to guide you 
-through setting up a gas policy and get personalized assistance.
+Have any questions? We're here to help. [Get in touch](https://cal.com/candidelabs/30mins) with the founders who will personally guide you through setting up a gas policy and get personalized assistance.
