--- a/docs/wallet/abstractionkit/0-introduction.mdx
+++ b/docs/wallet/abstractionkit/0-introduction.mdx
@@ -1,18 +1,18 @@
 ---
-title: Why use AbtractionKit to build Smart Accounts 
-description: Abstractionkit is a typescript library to easily build and send UserOperations, with first class support fot Safe Accounts and Simple EIP-7702 Accounts
+title: Why use AbstractionKit to build Smart Accounts
+description: AbstractionKit is a typescript library to easily build and send UserOperations, with first class support for Safe Accounts and Simple EIP-7702 Accounts
 image: /img/posters/abstractionkit-meta.png
 keywords: [typescript, sdk, userOperation, library]
 ---
 
 # Introduction to AbstractionKit
 
-![image](/img/posters/abstracitonkit-blog-poster.png)
+![image](/img/posters/abstractionkit-poster.png)
 
 A Typescript Library to easily build and send ERC-4337 UserOperations, with first class support for Safe Accounts, and Simple EIP-7702 Account.
 
 AbstractionKit encapsulates the standard's complexities and offers developers unparalleled flexibility to craft Smart Wallets, without the hassle of intricate details.
-Seamlessly use Safe Accounts, construct callData, estimate and sponsor gas (completly or with ERC-20 tokens), send UserOps to Bundlers and more – all while benefiting from being type-safe.
+Seamlessly use Safe Accounts, construct callData, estimate and sponsor gas (completely or with ERC-20 tokens), send UserOps to Bundlers and more – all while benefiting from being type-safe.
 
 - AbstractionKit is agnostic of:
   - Ethereum interface libraries: ethers, web3.js, viem/wagmi
@@ -21,8 +21,8 @@ Seamlessly use Safe Accounts, construct callData, estimate and sponsor gas (comp
 
 ## Why AbstractionKit
 
-Smart contract wallets are hard to build. We learned this from developing [Candide Wallet](https://candidewallet.com), one of the first Smart Wallets. We wrote its smart 
-contracts, got it audited, developed a compliant Bundler and designed paymaster gas features. Until we realized we've spent more on infarstructure than 
+Smart contract wallets are hard to build. We learned this from developing [Candide Wallet](https://candidewallet.com), one of the first Smart Wallets. We wrote its smart
+contracts, got it audited, developed a compliant Bundler and designed paymaster gas features. Until we realized we've spent more on infrastructure than
 our actual product, which was the consumer facing app. What we've built wasn't just for us; it was what developers like. 
 So, we refocused. AbstractionKit is our commitment to provide an SDK that let you build on smart accounts in days, not months.
 
