--- a/docs/wallet/abstractionkit/1.bundler.mdx
+++ b/docs/wallet/abstractionkit/1.bundler.mdx
@@ -51,7 +51,7 @@ Then you can consume Bundler methods:
 const entrypointAddresses = await bundler.supportedEntryPoints();
 ```
 
-### Paramaters
+### Parameters
 
 #### bundlerURL `string`
 
