--- a/docs/wallet/abstractionkit/3.paymaster.mdx
+++ b/docs/wallet/abstractionkit/3.paymaster.mdx
@@ -63,7 +63,7 @@ import { CandidePaymaster } from "abstractionkit";
 
 ### How to use
 
-Initialize a Paymaster with your RPC url. Get an API key from the [dashboard](httsp://dashboard.candide.dev).
+Initialize a Paymaster with your RPC url. Get an API key from the [dashboard](https://dashboard.candide.dev).
 
 ```ts title="paymaster.ts"
 import { CandidePaymaster } from "abstractionkit";
