--- a/docs/wallet/abstractionkit/7-safe-account-v2.mdx
+++ b/docs/wallet/abstractionkit/7-safe-account-v2.mdx
@@ -175,7 +175,7 @@ console.log(userOperation);
     <thead>
       <th align="left">Param Name</th>
       <th align="left">Param Type</th>
-      <th aign="left">Description</th>
+      <th align="left">Description</th>
     </thead>
     <tbody>
       <tr>
@@ -209,7 +209,7 @@ console.log(userOperation);
           <DataTable items={createUserOperationV6Overrides} />
         </td>
         <td align="left">
-          CreateUserOperationOverrides allows you to override any of the default paramaters for the user operation  
+          CreateUserOperationOverrides allows you to override any of the default parameters for the user operation
         </td>
       </tr>
     </tbody>
@@ -221,7 +221,7 @@ console.log(userOperation);
     <thead>
       <th align="left">Param Name</th>
       <th align="left">Param Type</th>
-      <th aign="left">Description</th>
+      <th align="left">Description</th>
     </thead>
     <tbody>
       <tr>
@@ -449,7 +449,7 @@ Account address(sender) : 0x1a02592A3484c2077d2E5D24482497F85e1980C6
 
 ### createInitCode
 
-Calculates the intCode needed to deploy the account onchain
+Calculates the initCode needed to deploy the account onchain
 
 #### Usage
 
@@ -550,7 +550,7 @@ initCode: 0x...
 
 ### createInitializerCallData
 
-Creates the initilizer calldata
+Creates the initializer calldata
 
 #### Usage
 
@@ -751,7 +751,7 @@ const [preVerificationGas, verificationGasLimit, callGasLimit] = await estimateU
 <TabItem value="response type" label="Response Type">
   <table>
     <thead>
-      <th align="left">Paramater</th>
+      <th align="left">Parameter</th>
       <th align="left">Type</th>
       <th align="left">Description</th>
     </thead>
@@ -946,7 +946,7 @@ Creates a meta-transaction to remove an owner from the Safe account, fetching th
 
 ### verifyWebAuthnSignatureForMessageHash
 
-A static method that verifies a webAuthn signed hash message for Passkeys, and can be also used even if the safe account hasn't been deplpyed yet.
+A static method that verifies a webAuthn signed hash message for Passkeys, and can be also used even if the safe account hasn't been deployed yet.
 
 <Tabs>
 <TabItem value="Param type" label="Param Types">
