--- a/docs/wallet/abstractionkit/8-safe-account-v3.mdx
+++ b/docs/wallet/abstractionkit/8-safe-account-v3.mdx
@@ -173,7 +173,7 @@ console.log(userOperation);
     <thead>
       <th align="left">Param Name</th>
       <th align="left">Param Type</th>
-      <th aign="left">Description</th>
+      <th align="left">Description</th>
     </thead>
     <tbody>
       <tr>
@@ -207,7 +207,7 @@ console.log(userOperation);
           <DataTable items={createUserOperationV7Overrides} />
         </td>
         <td align="left">
-          CreateUserOperationOverrides allows you to override any of the default paramaters for the user operation  
+          CreateUserOperationOverrides allows you to override any of the default parameters for the user operation
         </td>
       </tr>
     </tbody>
@@ -219,7 +219,7 @@ console.log(userOperation);
     <thead>
       <th align="left">Param Name</th>
       <th align="left">Param Type</th>
-      <th aign="left">Description</th>
+      <th align="left">Description</th>
     </thead>
     <tbody>
       <tr>
@@ -505,7 +505,7 @@ factoryData:  0x1688f0b900000000000000000000000029fcb43b46531bca003ddc8fcb67ffe9
 
 ### createInitializerCallData
 
-Creates the initilizer calldata
+Creates the initializer calldata
 
 #### Usage
 
@@ -706,7 +706,7 @@ const [preVerificationGas, verificationGasLimit, callGasLimit] = await estimateU
 <TabItem value="response type" label="Response Type">
   <table>
     <thead>
-      <th align="left">Paramater</th>
+      <th align="left">Parameter</th>
       <th align="left">Type</th>
       <th align="left">Description</th>
     </thead>
@@ -909,7 +909,7 @@ Creates a meta-transaction to remove an owner from the Safe account, fetching th
 
 ### verifyWebAuthnSignatureForMessageHash
 
-A static method that verifies a webAuthn signed hash message for Passkeys, and can be also used even if the safe account hasn't been deplpyed yet.
+A static method that verifies a webAuthn signed hash message for Passkeys, and can be also used even if the safe account hasn't been deployed yet.
 
 <Tabs>
 <TabItem value="Param type" label="Param Types">
