--- a/docs/wallet/bundler/2-rpc-methods.mdx
+++ b/docs/wallet/bundler/2-rpc-methods.mdx
@@ -206,7 +206,7 @@ Other status can be one of the following:
 <Tabs>
   <TabItem value="success" label="success">
 
-Example respone for an Included status
+Example response for an Included status
 ```ts
 {
   userOpHash: '0x1acede61123ab7116eb29c797aeaec3c03615c37732ba66428524aebdb4b4514',
@@ -520,7 +520,7 @@ Other status can be one of the following:
 <Tabs>
   <TabItem value="success" label="success">
 
-Example respone for an Included status
+Example response for an Included status
 ```ts
 {
   userOpHash: '0x1acede61123ab7116eb29c797aeaec3c03615c37732ba66428524aebdb4b4514',
@@ -782,7 +782,7 @@ Other status can be one of the following:
 <Tabs>
 <TabItem value="success" label="success">
 
-Example respone for an `Included` status
+Example response for an `Included` status
 ```json
 {
     "jsonrpc": "2.0",
