--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -59,7 +59,7 @@ console.log(`Using ${tokenSelected.name} (${tokenSelected.symbol}) for gas payme
 ```
 
 :::tip Test Tokens
-Request Candide Test Tokens (CTT) on our [Discord](https://discord.gg/8q2H6BEJuf) for testing. Ensure your smart account has sufficient ERC-20 tokens to pay for gas
+Get ERC-20 faucet tokens (CTT or USDT) from our [dashboard faucet](https://dashboard.candide.dev/faucet) for testing. Ensure your smart account has sufficient ERC-20 tokens to pay for gas.
 :::
 
 </TabItem>
