--- a/docs/wallet/paymaster/0-rpc-methods.mdx
+++ b/docs/wallet/paymaster/0-rpc-methods.mdx
@@ -12,7 +12,7 @@ import { DataTable } from "/src/components/Table";
 import { userOperationReturnParamsV06, userOperationParamV07 } from "/src/data/userOperation"
 import {
   candidePaymasterContext,
-  tokensParamatersV3,
+  tokensParametersV3,
   paymasterMetadataReturnParametersV06,
   paymasterMetadataReturnParametersV07,
   pm_supportedEntryPointsReturnParams,
@@ -122,7 +122,7 @@ Gets supported ERC-20 Tokens for gas payments, along side the paymaster metadata
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -137,7 +137,7 @@ Gets supported ERC-20 Tokens for gas payments, along side the paymaster metadata
       <td align="left">tokens</td>
       <td align="left">
         <p>Object[]</p>
-        <DataTable items={tokensParamatersV3} />
+        <DataTable items={tokensParametersV3} />
       </td>
     </tr>
   </tbody>
@@ -255,7 +255,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -394,7 +394,7 @@ Get Chain ID asks the paymaster service to return the chain_id it currently supp
 <TabItem value="response type" label="Response Type">
   <table>
     <thead>
-      <th align="left">Paramater</th>
+      <th align="left">Parameter</th>
       <th align="left">Type</th>
       <th align="left">Description</th>
     </thead>
@@ -533,7 +533,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -701,7 +701,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -856,7 +856,7 @@ Gets supported ERC-20 Tokens for gas payments, along side the paymaster metadata
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -871,7 +871,7 @@ Gets supported ERC-20 Tokens for gas payments, along side the paymaster metadata
       <td align="left">tokens</td>
       <td align="left">
         <p>Object[]</p>
-        <DataTable items={tokensParamatersV3} />
+        <DataTable items={tokensParametersV3} />
       </td>
     </tr>
   </tbody>
@@ -989,7 +989,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -1128,7 +1128,7 @@ Get Chain ID asks the paymaster service to return the chain_id it currently supp
 <TabItem value="response type" label="Response Type">
   <table>
     <thead>
-      <th align="left">Paramater</th>
+      <th align="left">Parameter</th>
       <th align="left">Type</th>
       <th align="left">Description</th>
     </thead>
@@ -1267,7 +1267,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -1435,7 +1435,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -1580,7 +1580,7 @@ Gets supported ERC-20 Tokens for gas payments, along side the paymaster metadata
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -1595,7 +1595,7 @@ Gets supported ERC-20 Tokens for gas payments, along side the paymaster metadata
       <td align="left">tokens</td>
       <td align="left">
         <p>Object[]</p>
-        <DataTable items={tokensParamatersV3} />
+        <DataTable items={tokensParametersV3} />
       </td>
     </tr>
   </tbody>
@@ -1703,7 +1703,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -1842,7 +1842,7 @@ Get Chain ID asks the paymaster service to return the chain_id it currently supp
 <TabItem value="response type" label="Response Type">
   <table>
     <thead>
-      <th align="left">Paramater</th>
+      <th align="left">Parameter</th>
       <th align="left">Type</th>
       <th align="left">Description</th>
     </thead>
@@ -1968,7 +1968,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
@@ -2132,7 +2132,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 <table>
   <thead>
-    <th align="left">Paramater</th>
+    <th align="left">Parameter</th>
     <th align="left">Type</th>
   </thead>
   <tbody>
