--- a/docs/wallet/paymaster/1-tokens-supported.mdx
+++ b/docs/wallet/paymaster/1-tokens-supported.mdx
@@ -29,7 +29,7 @@ import {
 List of ERC-20 Tokens accepted by Candide's Paymaster. Visit the [dashboard](https://dashboard.candide.dev) to get an API key. 
 
 :::info
-If you would like to see a token or network supported, reach out on Discord or email team@candidelabs.com
+If you would like to see a token or network supported, email team@candidelabs.com
 :::
 
 ## Mainnets
@@ -71,7 +71,7 @@ If you would like to see a token or network supported, reach out on Discord or e
 ## Testnets
 
 :::info
-Looking for test tokens Faucet? Jump into our Discord and request CTT by specifying the network and providing your address for delivery
+Looking for test tokens? Get ERC-20 faucet tokens (CTT or USDT) from our [dashboard faucet](https://dashboard.candide.dev/faucet).
 :::
 
 ### Arbitrum Sepolia
