--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -280,7 +280,7 @@ Once triggered, the recovery will started the recovery period delay, before it c
         <thead>
         <th align="left">Param Name</th>
         <th align="left">Param Type</th>
-        <th aign="left">Description</th>
+        <th align="left">Description</th>
         </thead>
         <tbody>
         <tr>
@@ -313,7 +313,7 @@ Once triggered, the recovery will start the recovery period delay, before it can
         <thead>
         <th align="left">Param Name</th>
         <th align="left">Param Type</th>
-        <th aign="left">Description</th>
+        <th align="left">Description</th>
         </thead>
         <tbody>
         <tr>
