--- a/docs/wallet/plugins/2-allowance.mdx
+++ b/docs/wallet/plugins/2-allowance.mdx
@@ -85,9 +85,9 @@ import { AllowanceModule } from "abstractionkit";
 
 AbstractionKit provides two types of methods for the Allowance Module
 1. The recommended methods that offer simplified interfaces. These are under [Methods](/wallet/plugins/allowance/#methods).
-2. Those prefixed with `createBase`, which match the exact contract method names and paramaters. These are under [Advanced Methods](/wallet/plugins/allowance/#advanced-methods).
+2. Those prefixed with `createBase`, which match the exact contract method names and parameters. These are under [Advanced Methods](/wallet/plugins/allowance/#advanced-methods).
 
-While `createBase` methods allow direct interaction with the contract, they can be confusing for developers due to the multiple options and paramaters involved. The recommended methods improves usability by providing clearer and more intuitive method names and input parameters.
+While `createBase` methods allow direct interaction with the contract, they can be confusing for developers due to the multiple options and parameters involved. The recommended methods improves usability by providing clearer and more intuitive method names and input parameters.
 
 
 :::tip
