fix typos across docs

--- a/docs/wallet/abstractionkit/0-introduction.mdx
+++ b/docs/wallet/abstractionkit/0-introduction.mdx
@@ -16,7 +16,7 @@ Seamlessly use Safe Accounts, construct callData, estimate and sponsor gas (comp
 
 - AbstractionKit is agnostic of:
   - Ethereum interface libraries: ethers, web3.js, viem/wagmi
-  - Bundler implentation: Plug and play from any bundler provider
+  - Bundler implementation: Plug and play from any bundler provider
   - Paymaster services: use any 3rd party paymaster, or build your own
 
 ## Why AbstractionKit
@@ -27,9 +27,9 @@ our actual product, which was the consumer facing app. What we've built wasn't j
 So, we refocused. AbstractionKit is our commitment to provide an SDK that let you build on smart accounts in days, not months.
 
 ### At the frontier of Efficiency
-AbstractionKit is engineered for optimal performance by minimizing HTTPS requests to the key infra (Node, Bundler, Paymaster). 
-We do this writing cryptographic techniques to calculate complex smart account signatures offline. Fewer HTTPS requests not only lower your 
-infrastructure costs not also gives you vastly improved, snappier user experience. Don't just take our word for it—we encourage you to verify. 
+AbstractionKit is engineered for optimal performance by minimizing HTTPS requests to the key infra (Node, Bundler, Paymaster).
+We do this writing cryptographic techniques to calculate complex smart account signatures offline. Fewer HTTPS requests not only lower your
+infrastructure costs but also gives you vastly improved, snappier user experience. Don't just take our word for it—we encourage you to verify. 
 Compare the performance of AbstractionKit against other account abstraction libraries in [AA-SDK-Benchmark](https://aa-sdk-benchmark.on-fleek.app/).
 
 ### Secure Smart Accounts
