--- a/docs/wallet/paymaster/0-rpc-methods.mdx
+++ b/docs/wallet/paymaster/0-rpc-methods.mdx
@@ -30,8 +30,8 @@ JSON-RPC API reference for Candide's Paymaster V3 service. Visit the [dashboard]
 
 ## Entrypoint V0.8
 
-EIP-7702 support is added with with EntryPoint v0.8. You can use the Paymaster API to offer gas sponsorship to endusers through a full gas policies or offering to pay gas in erc-20 tokens. 
-The Paymaster API for Entrypoint v0.8 is fully backword compatible and has no breaking changes from Entrypoint v0.7
+EIP-7702 support is added with with EntryPoint v0.8. You can use the Paymaster API to offer gas sponsorship to endusers through a full gas policies or offering to pay gas in erc-20 tokens.
+The Paymaster API for Entrypoint v0.8 is fully backward compatible and has no breaking changes from Entrypoint v0.7
 
 ### pm_supportedERC20Tokens
 
@@ -417,7 +417,7 @@ Get Chain ID asks the paymaster service to return the chain_id it currently supp
 
 ### pm_getPaymasterStubData
 
-[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivilant to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
+[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivalent to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
 It can return `isFinal: true` if the stub data is sufficient and no further data is needed.
 
 :::warning Review
@@ -599,7 +599,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 ### pm_getPaymasterData
 
-[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivilant to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
+[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivalent to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
 
 :::warning Review
 ERC-7677 is currently under review, and this method is subject to breaking changes based on the evolving specifications of the EIP.
@@ -1151,7 +1151,7 @@ Get Chain ID asks the paymaster service to return the chain_id it currently supp
 
 ### pm_getPaymasterStubData
 
-[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivilant to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
+[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivalent to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
 It can return `isFinal: true` if the stub data is sufficient and no further data is needed.
 
 :::warning Review
@@ -1333,7 +1333,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
 
 ### pm_getPaymasterData
 
-[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivilant to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
+[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivalent to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation).
 
 :::warning Review
 ERC-7677 is currently under review, and this method is subject to breaking changes based on the evolving specifications of the EIP.
@@ -1865,7 +1865,7 @@ Get Chain ID asks the paymaster service to return the chain_id it currently supp
 
 ### pm_getPaymasterStubData
 
-[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivilant to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation-1).
+[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivalent to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation-1).
 It can return `isFinal: true` if the stub data is sufficient and no further data is needed. 
 
 :::warning Review
@@ -2034,7 +2034,7 @@ If the paymaster rejects the UserOperation, it returns a standard JSON-RPC error
   
 ### pm_getPaymasterData
 
-[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivilant to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation-1).
+[ERC-7677](https://eips.ethereum.org/EIPS/eip-7677) compatible method. Equivalent to Candide's [`pm_sponsorUserOperation`](/wallet/paymaster/rpc-methods/#pm_sponsoruseroperation-1).
 
 :::warning Review
 ERC-7677 is currently under review, and this method is subject to breaking changes based on the evolving specifications of the EIP.
