--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -1,6 +1,6 @@
 ---
-title: Account Recovery guide and reference for adding recovery methods for Safe Accounts using abstractionkit 
-description: Active onchain account recovery with gaurdians through a time delay for Safe Accounts. 
+title: Account Recovery guide and reference for adding recovery methods for Safe Accounts using abstractionkit
+description: Active onchain account recovery with guardians through a time delay for Safe Accounts.
 keywords: [guardian, recovery, social-recovery, safe-recovery, gnosis-safe]
 ---
 
@@ -58,7 +58,7 @@ Learn more on how the Social Recovery Module work on this [post](../../../blog/m
 
 #### Frontend: SafeCover
 
-Built to server as a secondary interface for users to recover their Safe accounts
+Built to serve as a secondary interface for users to recover their Safe accounts
 
 - Link: https://safecover.eth.limo
 - Source code for releases: [candidelabs/safecover](https://github.com/candidelabs/safecover)
