--- a/docs/wallet/recovery/1-overview.mdx
+++ b/docs/wallet/recovery/1-overview.mdx
@@ -5,7 +5,7 @@ keywords: [safe recovery, social recovery, smart wallet, email recovery, guardia
 ---
 
 Secure Safe Accounts with a diverse set of recovery options like trusted contacts, email/SMS verification, Passkeys, secondary devices and more. 
-Safe Rocovery service has two main components: [Recovery UX](#recovery-ux-api) and [Email/SMS Recovery](#emailsms-recovery-api).
+Safe Recovery service has two main components: [Recovery UX](#recovery-ux-api) and [Email/SMS Recovery](#emailsms-recovery-api).
 
 ## Who is this for
 Wallets using Safe [Social Recovery Module](/wallet/plugins/recovery-with-guardians/), and want to offer a seamless and secure recovery experience for their end-users.
@@ -13,18 +13,18 @@ Wallets using Safe [Social Recovery Module](/wallet/plugins/recovery-with-guardi
 ## Recovery UX API
 
 ### Automatic Execution
-The service offers automatic execuction options to minimize UX friction and increase privacy for recovery contacts / guardians. 
+The service offers automatic execution options to minimize UX friction and increase privacy for recovery contacts / guardians. 
 It can be configured to automatically execute:
 
 1. The confirmation recovery transaction after the signature threshold is met, eliminating the need for guardians to cover gas costs.
-2. The finalization transaction after the grace period ends, avoding recovery contacts to return back to complete the process.
+2. The finalization transaction after the grace period ends, avoiding recovery contacts to return back to complete the process.
 
 ### Signature Aggregation and Storage
 Guardians signatures can be sent to the service to allow off-chain collection. The service can then automatically execute the recovery confirmation and finalization
 once all required signatures have been collected.
 
 ### Gas Sponsorship Relayer
-It includes a gas sponsorship relayer, which cover the gas costs for both confirmation and finilization
+It includes a gas sponsorship relayer, which cover the gas costs for both confirmation and finalization
 
 ### Social Engineering protection
 The api provides a communication system using emojis that enables guardians to verify and approve legitimate recovery requests, effectively preventing social phishing 
